Fixed spacing with event address

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -691,6 +691,11 @@
         .event-item__location-name,
         .event-item__location-detail {
             @include fs-data(3);
+            display: block;
+        }
+
+        .event-item__location-name {
+            float: left;
         }
 
         *:hover, &:hover {
